hphp/hack/test/typecheck/naming_fail_test1.php.exp
File "naming_fail_test1.php", line 20, characters 3-4:
Variable `$x` is undefined, or not always defined. (Naming[2050])
File "naming_fail_test1.php", line 14, characters 20-21:
Did you mean `$b` instead?
